Revision history for Dist-Zilla-Plugin-MakeMaker-Highlander

{{$NEXT}}

0.002     2013-09-23 05:58:30 America/New_York

    [FIXED]

    - Suppressed warnings if PERL_MM_OPT is not set

0.001     2013-09-22 23:30:45 America/New_York

    - First release
