@@ -2,6 +2,12 @@ Revision history for Dist-Zilla-Plugin-MakeMaker-Highlander
 
 {{$NEXT}}
 
+    [ADDED]
+
+    - The PERL_NO_HIGHLANDER environment variable may be used
+      to disable the UNINST behavior if it would break a build
+      system
+
 0.002     2013-09-23 05:58:30 America/New_York
 
     [FIXED]
